# Cluster-Chat-Server

./: CMakeLists.txt  MySQL数据库.md  聊天集群服务器.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.hpp
include/server/model/: FriendModel.hpp  GroupModel.hpp  OfflineMsgModel.hpp  UserModel.hpp  group.hpp  groupuser.hpp  user.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp  makefile
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp  makefile
src/server/db/: db.cpp
src/server/model/: FriendModel.cpp  GroupModel.cpp  OfflineMsgModel.cpp  UserModel.cpp
src/server/redis/: redis.cpp
